[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataproc"                      # 包名，将来 pip install dataprocp 时用到
version = "0.1.0"
description = "Audio preprocessing utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "327810854" }]

dependencies = [
  "librosa",
  "soundfile",
  "scipy",
  "Pillow",
  "soundfile"
  "scipy"
]
