[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataproc"
version = "0.1.0"
description = "Audio preprocessing utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "327810854" }]

dependencies = [
  "librosa",
  "soundfile",
  "scipy",
  "Pillow"
]
