[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataproc"
version = "0.1.0"
description = "A lightweight Python library for basic tabular data preprocessing"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Student Developer" }
]

dependencies = [
  "pandas>=1.5"
]